--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -11,6 +11,7 @@
     <Grid x:Name="MainGrid">
         <CommandBar x:Name="TopCommandBar" ClosedDisplayMode="Hidden" OverflowButtonVisibility="Collapsed" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
             <AppBarButton x:Name="BookmarkBtn"
+                          x:FieldModifier="public"
                           IsEnabled="False"
                           Width="300"
                           Icon="Save"
