--- a/Hitomi-Scroll-Viewer/MainWindow.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindow.xaml
@@ -6,5 +6,5 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Frame x:FieldModifier="public" x:Name="RootFrame"/>
+    <Frame x:Name="RootFrame"/>
 </Window>
