added go back button removed unnecessary comments added manual garbage collect line in SwitchPage

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -10,6 +10,14 @@
 
     <Grid x:Name="MainGrid">
         <CommandBar x:Name="TopCommandBar" ClosedDisplayMode="Hidden" OverflowButtonVisibility="Collapsed" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <AppBarButton x:Name="SwitchPageBtn"
+                          Width="128"
+                          Icon="Back"
+                          Label="Go Back"
+                          HorizontalAlignment="Left"
+                          Click="HandleGoBackBtnClick"
+                          />
+            <AppBarSeparator Width="250"/>
             <AppBarButton x:Name="BookmarkBtn"
                           x:FieldModifier="public"
                           IsEnabled="False"
