changed slider label

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -55,7 +55,7 @@
                         Minimum="0"
                         Maximum="5"
                         Width="240"
-                        Header="Auto Scrolling / Page Turning Speed"
+                        Header="Auto (Page Turning / Scrolling) Speed"
                         FontSize="14"
                         HorizontalAlignment="Center"
                         ValueChanged="SetScrollSpeed"/>
